# Fanfare

./: LICENSE  README.md
Backend/api-gateway/: .gitlab-ci.yml  README.md  deploy.conf  deploy.yml
Backend/auth-service/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  deploy.yml  docker-compose.yml  example-deploy.env  example.env  pyproject.toml
Backend/auth-service/auth_service/: app.py  logging_utils.py  service_dependencies.py  settings.py
Backend/auth-service/auth_service/models/: __init__.py  detail_response.py  login_form.py  refresh_request_body.py  tokens_response.py
Backend/auth-service/auth_service/routing/: auth_dependencies.py  router.py
Backend/auth-service/auth_service/services/blacklisted_token/: __init__.py  exceptions.py  service.py
Backend/auth-service/auth_service/services/blacklisted_token/documents/: __init__.py  blacklisted_access_token.py  blacklisted_refresh_token.py
Backend/auth-service/auth_service/services/jwt/: __init__.py  exceptions.py  payload.py  service.py  settings.py
Backend/auth-service/auth_service/services/user/: __init__.py  exceptions.py  models.py  service.py
Backend/documentation/: README.md
Backend/order-service/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  deploy.yml  example.env  logging.conf  requirements.txt
Backend/store-service/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  deploy.yml  docker-compose.yml  example.env  pom.xml
Backend/telegram-service/: .gitignore  .gitlab-ci.yml  Dockerfile  build.gradle  deploy.yml  (+3 more)
mobile-application/: settings.gradle.kts
(+445 files in other folders)
