[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic-settings = "^2.5.2"
pyjwt = "^2.9.0"
beanie = "^1.27.0"
aiohttp = "^3.10.10"
mypy = "^1.11.2"
black = "^24.10.0"
structlog = "^24.4.0"
email-validator = "^2.2.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
